<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySimpleRecorder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="rec_btn">RECORD</string>
    <string name="setting_btn">SETTING</string>
    <string name="his_btn">HISTORY</string>
    <string name="intro_btn">INTRO</string>
    <string name="stop_btn">STOP</string>
    <string name="save_confirm">SAVE?</string>
    <string name="y_btn">Y</string>
    <string name="n_btn">N</string>
    <string name="pause_btn">PAUSE</string>
    <string name="resume_btn">RESUME</string>
    <string name="default_font_scale">0.8</string>
    <string name="default_record_time">00:00:00</string>
    <string name="file_default_delimeter">></string>
    <string name="playing">playing</string>
</resources>